--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 
 Rezonator/views/cd432504-6d85-4dc5-a7e4-7163ea455219.yy
 Rezonator/views/fa0db8b0-e13c-4fcc-9875-74958aadf928.yy
+/Rezonator/datafiles/GMLive/
+/Rezonator/objects/obj_gmlive/
+/Rezonator/scripts/GMLive/
+/Rezonator/scripts/GMLiveAPI/
