--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
 /Executables filter=lfs diff=lfs merge=lfs -text
 Executables filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
+
