--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Rezonator/views/fa0db8b0-e13c-4fcc-9875-74958aadf928.yy
 /Rezonator/scripts/GMLive/
 /Rezonator/scripts/GMLiveAPI/
 /Rezonator/extensions/execute_shell_simple
+Rezonator/.DS_Store
