--- a/Rezonator/options/extensions/YYFirebaseFirestore.json
+++ b/Rezonator/options/extensions/YYFirebaseFirestore.json
@@ -1,6 +1,12 @@
 {
   "resourceType": "GMExtensionConfigSet",
-  "configurables": null,
-  "extensionId": null,
+  "configurables": {
+    "58df55cc-27e3-4b18-9fac-8c00f6af6d38": {
+      "Default": {
+        "value": "rezonator-13b47"
+      }
+    },
+    "d0bc7dea-7df6-4506-8c8a-78f04b930a4e": null
+  },
   "resourceVersion": "1.0"
 }
