Syncing left and right unit nav tabs

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,8 @@ Rezonator/views/fa0db8b0-e13c-4fcc-9875-74958aadf928.yy
 /Rezonator/objects/obj_gmlive/
 /Rezonator/scripts/GMLive/
 /Rezonator/scripts/GMLiveAPI/
+/Rezonator/scripts/GMLiveAPI_js/
+/Rezonator/scripts/GMLive_notOnce/
+/Rezonator/scripts/GMLive_noDeactivate/
+/Rezonator/extensions/GMLive_fallback/
 /Rezonator/extensions/execute_shell_simple
