--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ Rezonator/views/fa0db8b0-e13c-4fcc-9875-74958aadf928.yy
 /Rezonator/scripts/GMLive_noDeactivate/
 /Rezonator/extensions/GMLive_fallback/
 /Rezonator/extensions/execute_shell_simple
+Rezonator/Rezonator_test.dmg
